Pending changes in the mainline
===============================

=> Minimum SDK version: 1.12.9 <=

* Added Windows builder for Python 3.13
* New methods imported from SDK 1.12.9 (TODO: sync again once released)
  - AuditLog()
  - SetStableStatus()


Version 5.0 (2025-01-22)
========================

=> Minimum SDK version: 1.12.6 <=

* Added "orthanc.RestOutput.StartStreamAnswer()" and "orthanc.RestOutput.SendStreamChunk()"
* In "orthanc.pyi", enumerations are not tagged as deriving from "enum.Enum" anymore:
  https://github.com/orthanc-server/orthanc-builder/issues/21
* Docker-based builder scripts for Debian 12 (bookworm)


Version 4.3 (2024-07-04)
========================

* Created Python documentation for the Orthanc interface, check out "orthanc.pyi"
* Added option "AllowThreads" to release the GIL during the call to the native SDK functions
* Code model is now generated by the "orthanc-java" project
* Added Windows builder for Python 3.12
* Licensing information is now compliant with the FSFE REUSE specification


Version 4.2 (2024-05-16)
========================

* Fix signature of "orthanc.RestOutput.SendHttpStatus()"
* Added orthanc.RegisterMoveCallback2() that takes 4 callbacks like the 
  original C SDK function.  This allows you to implement a correct handling
  of the C-Move sub-operations count in the GetMoveSize().  The ApplyMove()
  must now handle a single sub-operation at a time.
  The legacy orthanc.RegisterMoveCallback() always considers that there is a single
  sub-operation and we have observed modalities complaining that the number of
  sub-operations was not matching the number of instances sent.


Version 4.1 (2023-08-30)
========================

* New function from the SDK wrapped in Python:
  - orthanc.RegisterStorageCommitmentScpCallback()
* New configuration section "Python" to group settings related to the plugin:
  - "Python.Path" is an alias for global option "PythonScript"